--- a/home.html
+++ b/home.html
@@ -38,14 +38,14 @@
 
     <body>
         <header>
-            <h1>home</h1>
+            <h1>Home</h1>
         </header>
         <nav>
             <figure>
                 <img src="media/headphone.png" />
                 <figcaption>playlist</figcaption>
             </figure>
-            <img src="media/vinyl.png" /> genre
+           <figure> <img src="media/vinyl.png" /> genre
             <img src="media/guitar.png" /> artist
         </nav>
         <nav>
