--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
                 font-size: 25px;
             }
             figcaption:hover{
-                background: #2c2cf6;
+                background: black;
             
             }
             figcaption:active{
-                background: #FF00FF;
+                background: black;
             }
             a{
                 text-decoration: none;
