--- a/artist.html
+++ b/artist.html
@@ -52,8 +52,7 @@
     </head>
     <body>
         <header>
-            <h3><a href="home.html" target="_self">⬅️back</a></h3>
-            <br />
+            <h3><a href="index.html" target="_self">⬅️back</a></h3>
             <h1>Artist</h1>
         </header>
 
@@ -61,16 +60,30 @@
             <div>
                 <span>- 장르별 아티스트 추천 -</span>
                 <ul>
-                    <span>Alternative & Pop</span>
-                    <a href=""><li>Yorushika</li></a>
-                    <a href=""><li>Ofiicial Hige Dandism</li></a>
+                    <span>J-Pop</span>
+                    <a href="https://www.youtube.com/@nbuna" target="_blank"
+                        ><li>Yorushika</li></a
+                    >
+                    <a
+                        href="https://www.youtube.com/@officialhigedandism"
+                        target="_blank"
+                        ><li>Ofiicial Hige Dandism</li></a
+                    >
                     <br />
                     <span>Future Bass</span>
-                    <a href=""><li>Snail's house</li></a>
+                    <a
+                        href="https://www.youtube.com/@ujicosnail"
+                        target="_blank"
+                        ><li>Snail's house</li></a
+                    >
                     <br />
                     <span>New Age</span>
-                    <a href=""> <li>A hisa</li></a>
-                    <a href=""><li>Sereno</li></a>
+                    <a href="https://www.youtube.com/@a_hisa" target="_blank">
+                        <li>A hisa</li></a
+                    >
+                    <a href="https://www.youtube.com/@Sereno" target="_blank"
+                        ><li>Sereno</li></a
+                    >
                     <br />
                 </ul>
             </div>
