--- a/genre.html
+++ b/genre.html
@@ -45,9 +45,10 @@
     </head>
     <body>
         <header>
-            <h3><a href="home.html" target="_self">⬅️back</a></h3>
+            <h3><a href="index.html" target="_self">⬅️back</a></h3>
             <h1>Genre</h1>
         </header>
+
         <section>- 주인장이 좋아하는 장르 리스트 -</section>
         <nav>
             <ul>
@@ -56,14 +57,10 @@
                 >
 
                 <br />
-                <a href="https://ko.wikipedia.org/wiki/뉴에이지" target="_self">
-                    <li>New Age</li></a
-                >
+                <a href="Newage.html" target="_self"> <li>New Age</li></a>
                 <br />
 
-                <a
-                    href="https://ko.wikipedia.org/wiki/퓨처_베이스"
-                    target="_blank"
+                <a href="Futurebass.html" target="_self"
                     ><li>Future Bass</li></a
                 >
                 <br />
