--- a/profile.html
+++ b/profile.html
@@ -49,50 +49,68 @@
             tbody tr :nth-child(odd) {
                 background: grey;
             }
+            #Reasons {
+                font-size: 20px;
+                display: block;
+                margin-left: 250px;
+                margin-right: 250px;
+                text-align: center;
+            }
+            #bold {
+                font-size: 30px;
+            }
         </style>
     </head>
     <body>
-        <h3><a href="index.html" target="_self">⬅️back</a></h3>
-        <h1>Profile</h1>
-
-        <table border="5">
-            <thead>
-                <th colspan="2">김지우</th>
-            </thead>
-            <tbody>
-                <tr>
-                    <td colspan="2" style="background-color: white">
-                        <img src="media/selfy.jpg" />
-                    </td>
-                </tr>
-                <tr>
-                    <td>성별</td>
-                    <td>여자</td>
-                </tr>
-                <tr>
-                    <td>생년월일</td>
-                    <td>2003년 09월 15일</td>
-                </tr>
-                <tr>
-                    <td>학력</td>
-                    <td>덕성여자대학교 수학과</td>
-                </tr>
-                <tr>
-                    <td>좋아하는 음식</td>
-                    <td>떡볶이</td>
-                </tr>
-            </tbody>
-            <tfoot>
-                <tf>
-                    <td colspan="2">
-                        <a
-                            href="https://www.instagram.com/killerwhale915/"
-                            target="_blank"
-                            >INSTARGRAM</a
-                        >
-                    </td></tf
-                >
-            </tfoot>
-        </table>
+        <header>
+            <h3><a href="index.html" target="_self">⬅️back</a></h3>
+            <h1>Profile</h1>
+        </header>
+        <section>
+            <table border="5">
+                <thead>
+                    <th colspan="2">김지우</th>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td colspan="2" style="background-color: white">
+                            <img src="media/selfy.jpg" />
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>성별</td>
+                        <td>여자</td>
+                    </tr>
+                    <tr>
+                        <td>생년월일</td>
+                        <td>2003년 09월 15일</td>
+                    </tr>
+                    <tr>
+                        <td>학력</td>
+                        <td>덕성여자대학교 수학과</td>
+                    </tr>
+                    <tr>
+                        <td>좋아하는 음식</td>
+                        <td>떡볶이</td>
+                    </tr>
+                </tbody>
+                <tfoot>
+                    <tf>
+                        <td colspan="2">
+                            <a
+                                href="https://www.instagram.com/killerwhale915/"
+                                target="_blank"
+                                >INSTARGRAM</a
+                            >
+                        </td></tf
+                    >
+                </tfoot>
+            </table>
+            <h3 id="Reasons">
+                <span id="bold">웹 사이트를 만들게 된 계기 :</span><br />
+                사람들에게 다양한 음악 장르를 접하게 해주고,<br />
+                좋아하는 음악을 공유하고 소통하고 싶었습니다.
+            </h3>
+        </section>
     </body>
 </html>
