--- a/contact.html
+++ b/contact.html
@@ -32,7 +32,7 @@
     </head>
     <body>
         <header>
-            <h3><a href="home.html" target="_self">⬅️back</a></h3>
+            <h3><a href="index.html" target="_self">⬅️back</a></h3>
             <h1>Contact</h1>
         </header>
         <section>
