--- a/playlist.html
+++ b/playlist.html
@@ -27,8 +27,11 @@
             }
         </style>
     </head>
+
     <body>
-        <h3><a href="home.html" target="_self">⬅️back</a></h3>
-        <h1>Playlist</h1>
+        <header>
+            <h3><a href="index.html" target="_self">⬅️back</a></h3>
+            <h1>Playlist</h1>
+        </header>
     </body>
 </html>
