--- a/posting.html
+++ b/posting.html
@@ -28,7 +28,9 @@
         </style>
     </head>
     <body>
-        <h3><a href="home.html" target="_self">⬅️back</a></h3>
-        <h1>Posting</h1>
+        <header>
+            <h3><a href="index.html" target="_self">⬅️back</a></h3>
+            <h1>Posting</h1>
+        </header>
     </body>
 </html>
