--- a/posting.html
+++ b/posting.html
@@ -32,5 +32,6 @@
             <h3><a href="index.html" target="_self">⬅️back</a></h3>
             <h1>Posting</h1>
         </header>
+        <section></section>
     </body>
 </html>
