--- a/Futurebass.html
+++ b/Futurebass.html
@@ -35,6 +35,10 @@
                 list-style: square;
                 font-size: 25px;
             }
+            p {
+                margin-left: 240px;
+                margin-right: 240px;
+            }
         </style>
     </head>
     <body>
