--- a/Newage.html
+++ b/Newage.html
@@ -38,6 +38,10 @@
                 color: rgb(66, 88, 232);
                 text-decoration: underline;
             }
+            p {
+                margin-left: 240px;
+                margin-right: 240px;
+            }
         </style>
     </head>
     <body>
