--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         </header>
         <nav>
             <figure>
-                <a href="playlist.html" target="_self">
+                <a href="javascript:alert('페이지 준비중입니다.')">
                 <img src="media/headphone.png" />
                 <figcaption>playlist</a></figcaption>
             </figure>
