--- a/posting.html
+++ b/posting.html
@@ -32,6 +32,29 @@
             <h3><a href="index.html" target="_self">⬅️back</a></h3>
             <h1>Posting</h1>
         </header>
-        <section></section>
+        <section>
+            <label for="text">글을 써주세요</label>
+            <input type="text" name="text" id="text" />
+            <button onclick="getText()">등록</button>
+        </section>
+        <div id="result"></div>
+        <script>
+            function getText() {
+                var text = document.getElementById("text").value;
+                var url =
+                    "https://api.github.com/repos/killerwhale915/hobby/issues?state=all&per_page=100&q=" +
+                    text;
+                fetch(url)
+                    .then((response) => response.json())
+                    .then((data) => {
+                        var result = "";
+                        for (var i = 0; i < data.length; i++) {
+                            result += "<p>" + data[i].title + "<p>";
+                        }
+                        document.getElementById("result").innerHTML = result;
+                    })
+                    .catch((error) => console.error(error));
+            }
+        </script>
     </body>
 </html>
