--- a/posting.html
+++ b/posting.html
@@ -27,7 +27,8 @@
             }
         </style>
     </head>
-    <body>
+
+    <body onload="loadData()">
         <header>
             <h3><a href="index.html" target="_self">⬅️back</a></h3>
             <h1>Posting</h1>
