--- a/posting.html
+++ b/posting.html
@@ -25,6 +25,11 @@
                 color: black;
                 visited: Black;
             }
+            section {
+                text-align: left;
+                margin-left: 10px;
+                margin-right: 240px;
+            }
         </style>
     </head>
     <body onload="loadData()">
@@ -32,16 +37,19 @@
             <h3><a href="index.html" target="_self">⬅️back</a></h3>
             <h1>Posting</h1>
         </header>
+        <section>
+            <form>
+                <label for="name">이름:</label>
+                <input type="text" id="name" name="name" /><br /><br />
 
-        <form>
-            <label for="name">이름:</label>
-            <input type="text" id="name" name="name" /><br /><br />
-
-            <label for="text">글을 써주세요:</label>
-            <input type="text" id="text" name="text" /><br /><br />
-            <button type="button" onclick="submitForm()">제출하기</button>
-        </form>
-        <div id="log"></div>
-        <script src="posting.js"></script>
+                <label for="text">글을 써주세요:</label>
+                <input type="text" id="text" name="text" /><br /><br />
+                <button type="button" onclick="submitForm()">제출하기</button>
+            </form>
+            <div id="log"></div>
+            <script src="posting.js"></script>
+            <div id="log"></div>
+            <button onclick="clearData()">모든 글 삭제</button>
+        </section>
     </body>
 </html>
