--- a/contact.html
+++ b/contact.html
@@ -35,9 +35,9 @@
             <h3><a href="index.html" target="_self">⬅️back</a></h3>
             <h1>Contact</h1>
         </header>
-        <section>
+        <footer>
             <h3>Tel. 010-3585-9622</h3>
             <h3>Email. kimjiwoo9622@gmail.com</h3>
-        </section>
+        </footer>
     </body>
 </html>
