--- a/artist.html
+++ b/artist.html
@@ -11,15 +11,18 @@
                 background-repeat: no-repeat;
                 background-position: center;
             }
+
             h1 {
                 text-align: center;
                 font-size: 70px;
                 margin-bottom: 10px;
                 margin-top: 10px;
             }
+
             h3 {
                 font-size: 25px;
             }
+
             a {
                 text-decoration: none;
                 color: black;
@@ -33,10 +36,6 @@
                 font-weight: bold;
             }
 
-            div > ul > span {
-                font-size: 35px;
-                font-weight: bold;
-            }
             li {
                 font-size: 25px;
                 margin-bottom: 10px;
@@ -44,7 +43,13 @@
             section {
                 text-align: center;
             }
-            ul > a :hover {
+
+            article {
+                font-size: 30px;
+                font-weight: bold;
+            }
+
+            article > a :hover {
                 background-color: black;
                 color: white;
             }
@@ -60,31 +65,42 @@
             <div>
                 <span>- 장르별 아티스트 추천 -</span>
                 <ul>
-                    <span>J-Pop</span>
-                    <a href="https://www.youtube.com/@nbuna" target="_blank"
-                        ><li>Yorushika</li></a
-                    >
-                    <a
-                        href="https://www.youtube.com/@officialhigedandism"
-                        target="_blank"
-                        ><li>Ofiicial Hige Dandism</li></a
-                    >
-                    <br />
-                    <span>Future Bass</span>
-                    <a
-                        href="https://www.youtube.com/@ujicosnail"
-                        target="_blank"
-                        ><li>Snail's house</li></a
-                    >
-                    <br />
-                    <span>New Age</span>
-                    <a href="https://www.youtube.com/@a_hisa" target="_blank">
-                        <li>A hisa</li></a
-                    >
-                    <a href="https://www.youtube.com/@Sereno" target="_blank"
-                        ><li>Sereno</li></a
-                    >
-                    <br />
+                    <article>
+                        <span>J-Pop</span>
+                        <a href="https://www.youtube.com/@nbuna" target="_blank"
+                            ><li>Yorushika</li></a
+                        >
+                        <a
+                            href="https://www.youtube.com/@officialhigedandism"
+                            target="_blank"
+                            ><li>Ofiicial Hige Dandism</li></a
+                        >
+                        <br />
+                    </article>
+                    <article>
+                        <span>Future Bass</span>
+                        <a
+                            href="https://www.youtube.com/@ujicosnail"
+                            target="_blank"
+                            ><li>Snail's house</li></a
+                        >
+                        <br />
+                    </article>
+                    <article>
+                        <span>New Age</span>
+                        <a
+                            href="https://www.youtube.com/@a_hisa"
+                            target="_blank"
+                        >
+                            <li>A hisa</li></a
+                        >
+                        <a
+                            href="https://www.youtube.com/@Sereno"
+                            target="_blank"
+                            ><li>Sereno</li></a
+                        >
+                        <br />
+                    </article>
                 </ul>
             </div>
         </section>
