--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
             h3 {
                 font-size: 25px;
             }
-            section {
+            footer {
                 text-align: center;
             }
             a {
