--- a/Alternative.html
+++ b/Alternative.html
@@ -23,7 +23,9 @@
             a {
                 text-decoration: none;
                 color: black;
-                visited: Black;
+            }
+            a:visited {
+                color: black;
             }
             section {
                 text-align: center;
