--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,9 @@
             a {
                 text-decoration: none;
                 color: black;
-                visited: Black;
+            }
+            a:visited {
+                color: black;
             }
         </style>
     </head>
