--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
                 text-decoration: none;
                 color:black
             }
+            a:visited {
+                color: black;
+            }
             a:hover{
                 color:white;
             }
