--- a/playlist.html
+++ b/playlist.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
-        <title>playlist</title>
+        <title>Playlist</title>
         <style>
             body {
                 background-image: url("media/back.jpg");
@@ -23,14 +23,18 @@
             a {
                 text-decoration: none;
                 color: black;
-                visited: Black;
+            }
+            a:visited {
+                color: black;
             }
         </style>
     </head>
 
     <body>
         <header>
-            <h3><a href="index.html" target="_self">⬅️back</a></h3>
+            <nav>
+                <h3><a href="index.html" target="_self">⬅️back</a></h3>
+            </nav>
             <h1>Playlist</h1>
         </header>
     </body>
