--- a/profile.html
+++ b/profile.html
@@ -23,7 +23,9 @@
             a {
                 text-decoration: none;
                 color: black;
-                visited: Black;
+            }
+            a:visited {
+                color: black;
             }
             table {
                 font-size: 20px;
