--- a/index.html
+++ b/index.html
@@ -106,6 +106,11 @@
                     <figcaption >Quiz</a></figcaption>
             </figure>
             <figure>
+                <a href="purefunc.html" target="_self">
+                <img src="media/user.png" />
+                <figcaption>Pure Funciton</a></figcaption>
+            </figure>
+            <figure>
                 <a href="contact.html" target="_self">
                     <img src="media/contact.png" />
                     <figcaption>Contact</a></figcaption>
