--- a/purefunc.html
+++ b/purefunc.html
@@ -3,6 +3,28 @@
     <head>
         <meta charset="UTF-8" />
         <title>Pure function의 사용</title>
+        <script>
+            //a와 b를 더하는 함수
+            function addNumbers(a, b) {
+                return a + b;
+            }
+
+            //a와 b중 더 큰 수를 저장하는 함수
+            function getMaxNumber(a, b) {
+                return Math.max(a, b);
+            }
+            function displayResults() {
+                const sum = addNumbers(5, 3);
+                const maxNumber = getMaxNumber(8, 3);
+                document.getElementById("sumResult").textContent = sum;
+                document.getElementById("MaxResult").textContent = maxNumber;
+            }
+
+            // displayResults 함수 실행
+            document.addEventListener("DOMContentLoaded", function () {
+                displayResults();
+            });
+        </script>
         <style>
             body {
                 background-image: url("media/back.jpg");
@@ -33,7 +55,6 @@
                 font-weight: bold;
             }
         </style>
-        <script src="ABC.js"></script>
     </head>
     <body>
         <header>
