--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
     <head>
         <meta charset="UTF-8" />
         <title>My Website</title>
-        <script src="https://code.jquery.com/jquery-3.7.0.min.js" integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
+        <script
+        src="https://code.jquery.com/jquery-3.7.0.min.js"
+        integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g="
+        crossorigin="anonymous"
+    ></script>
         <script src="ABC.js"></script>
         <style>
             body {
@@ -101,7 +105,7 @@
             </figure>
             <figure>
                 <!-- 마우스 클릭 시 페이지 이동할건지 질문한다 -->
-                <a target="_self" onclick=enterQuiz() class="pointer">
+                <a href ="quiz.html" target="_self" onclick=enterQuiz() class="pointer">
                     <img src="media/quiz.png"  />
                     <figcaption >Quiz</a></figcaption>
             </figure>
