--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             </figure>
             <figure>
                 <a href="purefunc.html" target="_self">
-                <img src="media/user.png" />
+                <img src="media/function.png" />
                 <figcaption>Pure Funciton</a></figcaption>
             </figure>
             <figure>
