--- a/index.html
+++ b/index.html
@@ -115,6 +115,11 @@
                 <figcaption>Pure Funciton</a></figcaption>
             </figure>
             <figure>
+                <a href="ajax.html" target="_self">
+                <img src="media/function.png" />
+                <figcaption>ajax</a></figcaption>
+            </figure>
+            <figure>
                 <a href="contact.html" target="_self">
                     <img src="media/contact.png" />
                     <figcaption>Contact</a></figcaption>
